# rooted_subtree_optim

./: .gitignore  README.md  Rooted_subtree_with_capacity_constraints.ipynb  bilan.ipynb  model_1.py  model_2.py  pyproject.toml  test.sh
Solutions_model_1/: bilan.csv  btk_031_0_0.dat.sol  btk_031_0_4.dat.sol  btk_031_2_0.dat.sol  btk_031_2_4.dat.sol  btk_032_0_0.dat.sol  btk_032_0_4.dat.sol  btk_032_2_0.dat.sol  btk_032_2_4.dat.sol  btk_054_0_0.dat.sol  btk_054_0_4.dat.sol  btk_054_2_0.dat.sol  btk_054_2_4.dat.sol  btk_075_0_0.dat.sol  btk_075_0_4.dat.sol  btk_075_2_0.dat.sol  btk_075_2_4.dat.sol  btk_087_0_0.dat.sol  btk_087_0_4.dat.sol  btk_087_2_0.dat.sol  btk_087_2_4.dat.sol  btk_1-Reichstett_0_0.dat.sol  btk_1-Reichstett_0_4.dat.sol  btk_1-Reichstett_2_0.dat.sol  btk_1-Reichstett_2_4.dat.sol  btk_102_0_0.dat.sol  btk_102_0_4.dat.sol  btk_102_2_0.dat.sol  btk_102_2_4.dat.sol  btk_109_0_0.dat.sol  btk_109_0_4.dat.sol  btk_109_2_0.dat.sol  btk_109_2_4.dat.sol  btk_125_0_0.dat.sol  btk_125_0_4.dat.sol  btk_125_2_0.dat.sol  btk_125_2_4.dat.sol  btk_162_0_0.dat.sol  btk_162_0_4.dat.sol  btk_162_2_0.dat.sol  (+3187 more)
Solutions_model_2/: bilan.csv  btk_031_0_0.dat.sol  btk_031_0_4.dat.sol  btk_031_2_0.dat.sol  btk_031_2_4.dat.sol  btk_032_0_0.dat.sol  btk_032_0_4.dat.sol  btk_032_2_0.dat.sol  btk_032_2_4.dat.sol  btk_054_0_0.dat.sol  btk_054_0_4.dat.sol  btk_054_2_0.dat.sol  btk_054_2_4.dat.sol  btk_075_0_0.dat.sol  btk_075_0_4.dat.sol  btk_075_2_0.dat.sol  btk_075_2_4.dat.sol  btk_087_0_0.dat.sol  btk_087_0_4.dat.sol  btk_087_2_0.dat.sol  btk_087_2_4.dat.sol  btk_102_0_0.dat.sol  (+3234 more)
